# goose-plugins

./: .gitignore  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE copy  README.md  justfile  pyproject.toml  test_file.py
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yaml  pypi_release.yaml  static.yml  take.yml  update-loosegoose-leaderboard.yml
content/: content.json  index.html
prompts/: critical_systems_thinking.jinja
src/goose_plugins/: cli.py  notes.md
src/goose_plugins/prompts/: critical_systems_thinking.jinja
src/goose_plugins/toolkits/: artify.py  code_complexity.py  complexity_analyzer.py  critical_systems_thinking.py  cst.py  data.py  dockerize_my_app.py  filetype_analyzer.py  todo.py
src/goose_plugins/toolkits/prompts/: critical_systems_thinking.jinja
src/goose_plugins/toolkits/tools/: analysis_tools.py  search_tools.py  task_management_tools.py
src/goose_plugins/toolkits/utils/: analysis_utils.py  logging_utils.py  task_utils.py
src/goose_plugins/utils/: log_streamer.py  selenium_web_browser.py  serper_search.py
tests/toolkits/: test_artify.py  test_code_complexity.py  test_complexity_analyzer.py  test_critical_systems_thinking.py  test_data.py  test_dockerize_my_app.py  test_filetype_analyzer.py  test_todo.py
tests/toolkits/test_data/: sample.csv
