[project]
name = "goose-plugins"
description = "a collection of community plugins for Goose"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ai-exchange>=0.8.4",
    "goose-ai>=0.9.0",
]
author = [{ name = "Block", email = "ai-oss-tools@block.xyz" }]
packages = [{ include = "goose_plugins", from = "src" }]

[tool.hatch.build.targets.wheel]
packages = ["src/goose_plugins"]

[project.entry-points."metadata.plugins"]
goose-plugins = "goose_plugins:module_name"

[project.entry-points."goose.toolkit"]
artify = "goose_plugins.toolkits.artify:VincentVanCode"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "codecov>=2.1.13",
]


